--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Numbering Guess Game Using Html Css and Javascript by Yash Bhola">
     <title>Guess The Number Game | By Yash Bhola </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="game.png" type="image/x-icon">
 </head>
 
 <body>
